--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
         versionCode 1
         versionName "1.0"
 
+        def localProperties = new Properties()
+        localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+        buildConfigField "String", "SPOONACULAR_KEY", localProperties['apiKey']
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
